# hri_face_identification

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: 00-defaults.yml
include/hri_face_identification/: face_recognition.hpp  node_face_identification.hpp
launch/: face_identification.launch  face_identification.launch.py  face_identification_with_args.launch.py  hri_face_identification.launch.py
model/data/: faces_db.json
module/: hri_face_identification_module.yaml
nodes/: identify  identify.py
src/: batch_process.cpp  db_process.cpp  db_record.cpp  face_recognition.cpp  face_recognition.hpp  identify.cpp  main.cpp
src/hri_face_identification/: batch_process.cpp  face_recognition.cpp  node_face_identification.cpp
test/: test_face_id.cpp  test_face_id.test  test_face_recognition.cpp
test-data/: face_person_map.json
test/data/: test_faces_db.json
