<?xml version="1.0"?>
<package format="2">
  <name>hri_face_identification</name>
  <version>0.3.2</version>
  <description>hri_face_identification is a ROS4HRI-compatible package for face identification</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>BSD</license>

  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbag</depend>
  <depend>hri_msgs</depend>
  <depend>image_transport</depend>
  <depend>libdlib-dev</depend>
  <depend>libblas-dev</depend>
  <depend>liblapack-dev</depend>
  <depend>hri</depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
